img fix resposive about & work

--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -253,7 +253,7 @@ input:required {
 }
 
 @mixin sm {
-  @media(min-width: 576px) and (max-width: 767px) {
+  @media(max-width: 767px) {
       @content;
   }
 }
