--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -674,6 +674,7 @@ header .container .head_content .menu .m_bar li:first-child {
 }
 
 #work .work_content .work_tab .nav-pills .nav-link {
+  font-size: 16px;
   color: #7a849a;
   background-color: transparent;
   text-transform: capitalize;
@@ -688,7 +689,7 @@ header .container .head_content .menu .m_bar li:first-child {
   width: 0;
   height: 2px;
   background: #5787ff;
-  bottom: -20px;
+  bottom: -8px;
   left: 0;
   transition: 0.3s;
   -webkit-transition: 0.3s;
@@ -701,8 +702,16 @@ header .container .head_content .menu .m_bar li:first-child {
   width: 120%;
 }
 
+#work .project_img {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
 #work .project_img img {
-  max-width: 100%;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
 }
 
 #work .project_info span {
@@ -884,18 +893,42 @@ header .container .head_content .menu .m_bar li:first-child {
   padding-bottom: 100px;
 }
 
-#about .about_content .about_contect_img {
+#about .about_content .about_content_img {
   margin-bottom: 30px;
+  width: 100%;
+  height: 354px;
+}
+
+#about .about_content .about_content_img img {
+  width: 100%;
+  height: 354px;
+  object-fit: cover;
+}
+
+#about .about_content .about_content_img_1 {
+  height: 354px;
+  width: 100%;
 }
 
 #about .about_content .about_content_img_1 img {
-  width: 200px;
+  width: 100%;
   height: 354px;
-  object-fit: contain;
+  object-fit: cover;
+}
+
+#about .about_content .about_content_img_2 {
+  width: 100%;
+  height: 449px;
+}
+
+#about .about_content .about_content_img_2 img {
+  width: 100%;
+  height: 449px;
+  object-fit: cover;
 }
 
 #about .about_content .play_video {
-  margin-top: -4px;
+  margin-top: 25px;
 }
 
 #about .about_content .play_video span {
@@ -947,8 +980,15 @@ header .container .head_content .menu .m_bar li:first-child {
   margin-right: 75px;
 }
 
+#about_content_2 .about_content_2_img {
+  width: 100%;
+  height: 825px;
+}
+
 #about_content_2 .about_content_2_img img {
-  padding-top: 34px;
+  width: 100%;
+  height: 825px;
+  object-fit: cover;
 }
 
 #about_content_2 .container .row .r_space {
@@ -956,8 +996,8 @@ header .container .head_content .menu .m_bar li:first-child {
 }
 
 #team {
-  padding-top: 178px;
-  padding-bottom: 100px;
+  padding-top: 186px;
+  padding-bottom: 90px;
   background-color: #F9F9F9;
 }
 
@@ -967,6 +1007,17 @@ header .container .head_content .menu .m_bar li:first-child {
 
 #team .team_card {
   margin-top: 22px;
+}
+
+#team .team_card .members_img {
+  width: 100%;
+  height: 475px;
+}
+
+#team .team_card .members_img img {
+  object-fit: cover;
+  width: 100%;
+  height: 475px;
 }
 
 #team .team_card .member_position {
@@ -1283,7 +1334,7 @@ header .container .head_content .menu .m_bar li:first-child {
   font-size: 20px;
   line-height: 44px;
   color: #3E424B;
-  padding-bottom: 25px;
+  padding-bottom: 10px;
   display: block;
 }
 
@@ -1424,22 +1475,96 @@ header .container .head_content .menu .m_bar li:first-child {
     margin-bottom: 30px;
   }
   #about .about_content .col-lg-6 .play_video {
-    margin-top: 32px;
+    margin-top: 25px;
+  }
+  .about_content_2_img {
+    margin-bottom: 30px;
+  }
+  .member_position h3 {
+    font-size: 52px !important;
   }
   /* about section end */
-  /* ?? section start */
-  /* ?? section end */
+  /* work section start */
+  #work .work_content .work_tab .nav-pills .nav-link {
+    margin: 0 10px;
+  }
+  #work .work_content .tab-text p {
+    font-size: 15px;
+  }
+  .project_img {
+    height: 300px !important;
+  }
+  .project_img img {
+    height: 300px !important;
+  }
+  #work .project_info h3 {
+    font-size: 36px;
+    padding-bottom: 20px;
+  }
+  .social_links {
+    padding-bottom: 0px;
+  }
+  /* work section end */
 }
 
-/* Small devices 576 - 767 */
-@media (min-width: 576px) and (max-width: 767px) {
+/* Small devices 320 - 767 */
+@media (max-width: 767px) {
   /* about section start */
   #about .about_content .col-lg-6 .play_video {
-    margin-top: -22px;
+    margin-top: 25px;
+  }
+  #about_content_2 {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  #team {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .about_content_2_img {
+    margin-bottom: 30px;
+  }
+  .member_position h3 {
+    font-size: 52px !important;
+  }
+  section {
+    padding: 60px 0px;
   }
   /* about section end */
-  /* ?? section start */
-  /* ?? section end */
+  /* work  section start */
+  .project_img {
+    height: 200px !important;
+  }
+  .project_img img {
+    height: 200px !important;
+  }
+  #work {
+    padding-top: 80px;
+  }
+  #work .project_info h3 {
+    font-size: 24px;
+    padding-bottom: 0px;
+  }
+  #work .project_info .v_project {
+    letter-spacing: 5px;
+  }
+  .social_links li {
+    margin: 0 10px;
+  }
+  .social_links {
+    padding-bottom: 0px;
+  }
+  #work .work_content .tab-text p {
+    padding-bottom: 15px;
+  }
+  #work .work_content .work_tab .nav-pills .nav-link {
+    margin: 0;
+    margin-right: 20px;
+  }
+  #work .work_content .work_tab .nav-pills .nav-link::before {
+    bottom: -2px;
+  }
+  /* work  section end */
 }
 
 /* Xtra_Small devices 0 - 575 */
@@ -1452,12 +1577,18 @@ header .container .head_content .menu .m_bar li:first-child {
   }
   /* About section start */
   #about .about_content .col-lg-6 .play_video {
-    margin-top: -15px;
-    white-space: nowrap;
+    margin-top: 10px;
+    white-space: wrap;
   }
   #about_content_2 .container .r_space {
     padding-left: 15px !important;
     margin-bottom: 30px;
+  }
+  .about_content_2_img {
+    margin-bottom: 30px;
+  }
+  .member_position h3 {
+    font-size: 52px !important;
   }
   /* About section end */
   #footer_area .connect_info p {
