--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -4,19 +4,37 @@
 
     .about_content {
 
-        .about_contect_img {
+        .about_content_img {
             margin-bottom: 30px;
+            width: 100%;
+            height: 354px;
+            img{
+                width: 100%;
+                height: 354px;
+                object-fit: cover;
+            }
         }
         .about_content_img_1{
+            height: 354px;
+            width: 100%;
             img{
-                width: 200px;
+                width: 100%;
                 height: 354px;
-                object-fit: contain;
+                object-fit: cover;
+            }
+        }
+        .about_content_img_2{
+            width: 100%;
+            height: 449px;
+            img{
+                width: 100%;
+                height: 449px;
+                object-fit: cover;
             }
         }
 
         .play_video {
-            margin-top: -4px;
+            margin-top: 25px;
 
             span {
                 font-size: 16;
@@ -70,8 +88,12 @@
         }
     }
     .about_content_2_img {
+        width: 100%;
+        height: 825px;
         img{
-            padding-top: 34px;
+            width: 100%;
+            height: 825px;
+            object-fit: cover;
         }
     }
 
@@ -87,8 +109,8 @@
 }
 
 #team {
-    padding-top: 178px;
-    padding-bottom: 100px;
+    padding-top: 186px;
+    padding-bottom: 90px;
     background-color: #F9F9F9;
     .section_title{
         h2{
@@ -98,6 +120,15 @@
     }
     .team_card {
         margin-top: 22px;
+        .members_img{
+            width: 100%;
+            height: 475px;
+            img{
+                object-fit: cover;
+                width: 100%;
+                height: 475px;
+            }
+        }
         .member_position {
             margin-bottom: 105px;
 
