--- a/assets/scss/_works.scss
+++ b/assets/scss/_works.scss
@@ -15,6 +15,7 @@
 
         .work_tab {
             .nav-pills .nav-link {
+                font-size: 16px;
                 color: #7a849a;
                 background-color: transparent;
                 text-transform: capitalize;
@@ -28,7 +29,7 @@
                     width: 0;
                     height: 2px;
                     background: #5787ff;
-                    bottom: -20px;
+                    bottom: -8px;
                     left: 0;
                     transition: 0.3s;
                     -webkit-transition: 0.3s;
@@ -47,8 +48,13 @@
     }
 
     .project_img {
+        width: 100%;
+        height: 400px;
+        overflow: hidden;
         img {
-            max-width: 100%;
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
         }
     }
 
