--- a/assets/scss/_works.scss
+++ b/assets/scss/_works.scss
@@ -21,7 +21,7 @@
                 text-transform: capitalize;
                 position: relative;
                 padding: 0;
-                margin: 0 20px;
+                margin-left: 50px;
 
                 &::before {
                     position: absolute;
@@ -29,7 +29,7 @@
                     width: 0;
                     height: 2px;
                     background: #5787ff;
-                    bottom: -8px;
+                    bottom: -13px;
                     left: 0;
                     transition: 0.3s;
                     -webkit-transition: 0.3s;
@@ -40,7 +40,7 @@
 
                 &.nav-link.active {
                     &::before {
-                        width: 120%;
+                        width: 100%;
                     }
                 }
             }
@@ -76,10 +76,11 @@
         }
 
         .v_project {
-            color: #3e424b;
+            color: $black;
             line-height: 14px;
             font-size: 12px;
-            letter-spacing: 8px;
+            letter-spacing: 3px;
+            font-weight: $semi_bold;
             text-transform: uppercase;
         }
     }
