--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -673,6 +673,10 @@ header .container .head_content .menu .m_bar li:first-child {
   margin: 0;
 }
 
+#work .work_content .work_tab ul {
+  justify-content: flex-end;
+}
+
 #work .work_content .work_tab .nav-pills .nav-link {
   font-size: 16px;
   color: #7a849a;
@@ -691,11 +695,16 @@ header .container .head_content .menu .m_bar li:first-child {
   background: #5787ff;
   bottom: -13px;
   left: 0;
+  border-radius: 3px;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
 }
 
 #work .work_content .work_tab .nav-pills .nav-link.nav-link.active::before {
@@ -1486,11 +1495,11 @@ header .container .head_content .menu .m_bar li:first-child {
   }
   /* about section end */
   /* work section start */
-  #work .work_content .work_tab .nav-pills .nav-link {
-    margin: 0 10px;
-  }
   #work .work_content .tab-text p {
     font-size: 15px;
+  }
+  #work .work_content .work_tab .nav-pills .nav-link {
+    margin-left: 20px;
   }
   .project_img {
     height: 300px !important;
@@ -1547,7 +1556,7 @@ header .container .head_content .menu .m_bar li:first-child {
     padding-bottom: 0px;
   }
   #work .project_info .v_project {
-    letter-spacing: 5px;
+    letter-spacing: 2px;
   }
   .social_links li {
     margin: 0 10px;
@@ -1563,7 +1572,10 @@ header .container .head_content .menu .m_bar li:first-child {
     margin-right: 20px;
   }
   #work .work_content .work_tab .nav-pills .nav-link::before {
-    bottom: -2px;
+    bottom: -6px;
+  }
+  #work .work_content .work_tab ul {
+    justify-content: flex-start;
   }
   /* work  section end */
 }
