--- a/assets/scss/_works.scss
+++ b/assets/scss/_works.scss
@@ -14,6 +14,9 @@
         }
 
         .work_tab {
+            ul{
+                justify-content: flex-end;
+            }
             .nav-pills .nav-link {
                 font-size: 16px;
                 color: #7a849a;
@@ -31,12 +34,17 @@
                     background: #5787ff;
                     bottom: -13px;
                     left: 0;
+                    border-radius: 3px;
                     transition: 0.3s;
                     -webkit-transition: 0.3s;
                     -moz-transition: 0.3s;
                     -ms-transition: 0.3s;
                     -o-transition: 0.3s;
-                }
+                    -webkit-border-radius: 3px;
+                    -moz-border-radius: 3px;
+                    -ms-border-radius: 3px;
+                    -o-border-radius: 3px;
+}
 
                 &.nav-link.active {
                     &::before {
