--- a/assets/scss/_work_slider.scss
+++ b/assets/scss/_work_slider.scss
@@ -81,6 +81,14 @@
           }
         }
 
+        .project_img{
+          img{
+             width: 800px;
+             height: 400px;
+             object-fit: cover;
+          }
+        }
+
         &.slick-cloned {
           opacity: 0 !important;
           pointer-events: none;
