--- a/assets/scss/_details.scss
+++ b/assets/scss/_details.scss
@@ -2,8 +2,6 @@
     margin-top: 50px;
     padding-bottom: 100px;
     .single-slider{
-        width: 100%;
-        height: 791px;
         img{
             width: 100%;
             height: 791px;
@@ -21,6 +19,7 @@
 }
 #project_area{
     padding-top: 90px;
+    padding-bottom: 75px;
     .project_title_2{
         h2{
             color: $black;
@@ -54,6 +53,7 @@
         }
     }
     .our_role{
+        margin-bottom: 40px;
         ul{
             h4{
                 color: #3E424B;
@@ -66,8 +66,48 @@
                 font-size: 16px;
                 color: #7A849A;
                 line-height: 24px;
+                padding-bottom: 5px;
 
             }
+        }
+    }
+    .our_role_img{
+        width: 100%;
+        height: 363px;
+        img{
+            width: 100%;
+            height: 363px;
+            object-fit: cover;
+        }
+    }
+}
+#details_project{
+    padding-top: 75px;
+    padding-bottom: 100px;
+    .project_info {
+        span {
+            font-size: 12px;
+            line-height: 14px;
+            color: #7a849a;
+        }
+
+        h3 {
+            color: #3e424b;
+            font-size: 46px;
+            font-weight: 600;
+            font-family: 'Oswald', sans-serif;
+            padding-bottom: 42px;
+            line-height: 55px;
+            margin: 0;
+        }
+
+        .v_project {
+            color: $black;
+            line-height: 14px;
+            font-size: 12px;
+            letter-spacing: 3px;
+            font-weight: $semi_bold;
+            text-transform: uppercase;
         }
     }
 }
