--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -1,8 +1,15 @@
 /* Banner section start */
 #banner {
   overflow: hidden;
-  padding-top: 187px;
-  padding-bottom: 209px;
+  // padding-top: 187px;
+  // padding-bottom: 209px;
+  padding: 0;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding-top: 188px;
+  padding-bottom: 208px;
   @media(max-width: 575px) {
    padding-top: 70px;    
    padding-bottom: 112px;   
@@ -44,11 +51,24 @@
     .banner_img{
       img{
         margin-top: 36px;
+        @media(max-width: 1024px) {
+          display: none;
+        }
         @media(max-width: 575px) {
-
           max-width: 100%;
         }
       }
+    }
+  }
+  // shape img
+  .round_shape_img {
+    position: absolute;
+    z-index: -1;
+    pointer-events: none;
+    top: -478px;
+    left: -480px;
+    img{
+      max-width: 100%;
     }
   }
 }
