--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -10,6 +10,22 @@
 
     .nav_links{
       padding-top: 18px;
+        li {
+          a {
+            &.active{
+              position: relative;
+            &::after{
+              content: '';
+              position: absolute;
+              width: 100%;
+              height: 3px;
+              left: 0;
+              bottom: 0;
+              background-color: $black;
+            }
+           }
+          }
+        }
     }
     span {
       font-size: 20px;
