--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ button, button:hover, button:focus {
 
 body {
   font-family: 'Poppins', sans-serif;
+  position: relative;
 }
 
 .section_title h2 {
@@ -813,6 +814,7 @@ header .container .head_content .menu .m_bar li:first-child {
 #about {
   margin-top: 25px;
   padding-bottom: 100px;
+  position: relative;
 }
 
 #about .about_content .about_content_img {
@@ -961,6 +963,18 @@ header .container .head_content .menu .m_bar li:first-child {
   color: #7A849A;
   margin-top: 12px;
   display: block;
+}
+
+body .round_shape_img {
+  position: absolute;
+  pointer-events: none;
+  top: 800px;
+  left: 600px;
+  z-index: -1;
+}
+
+body .round_shape_img img {
+  max-width: 100%;
 }
 
 #error_area {
