--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,7 +300,8 @@ header .container .head_content .menu .m_bar li:first-child {
 
 .fullscreen-menu {
   min-width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
+  min-height: 800px;
   background-color: #3E424B;
   position: fixed;
   top: 0;
@@ -317,12 +318,24 @@ header .container .head_content .menu .m_bar li:first-child {
   min-height: 75vh;
 }
 
+@media (max-width: 767px) {
+  .fullscreen-menu .menu-body {
+    min-height: 70vh;
+  }
+}
+
 .fullscreen-menu .menu-body .menu-container {
   min-height: 75vh;
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
   align-content: stretch;
+}
+
+@media (max-width: 767px) {
+  .fullscreen-menu .menu-body .menu-container {
+    min-height: 70vh;
+  }
 }
 
 .fullscreen-menu .menu-body .menu-close {
@@ -408,11 +421,67 @@ header .container .head_content .menu .m_bar li:first-child {
   -webkit-text-stroke: 0;
 }
 
+@media (max-width: 991px) and (min-width: 768px) {
+  .fullscreen-menu .menu-body .main-menu ul li a {
+    font-size: 60px;
+    line-height: 70px;
+    padding: 0 40px;
+  }
+}
+
+@media (max-width: 767px) {
+  .fullscreen-menu .menu-body .main-menu ul li a {
+    font-size: 35px;
+    line-height: 45px;
+    padding: 0 26px;
+    width: 100%;
+  }
+  .fullscreen-menu .menu-body .main-menu ul li a span {
+    top: -8px;
+    left: 50%;
+    font-size: 16px;
+    line-height: 25px;
+  }
+}
+
+@media (max-width: 574px) {
+  .fullscreen-menu .menu-body .main-menu ul li a {
+    font-size: 30px;
+    line-height: 35px;
+    padding: 0 20px;
+    width: 100%;
+  }
+  .fullscreen-menu .menu-body .main-menu ul li a span {
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .fullscreen-menu .menu-body .main-menu ul li {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 25px;
+  }
+}
+
+@media (max-width: 574px) {
+  .fullscreen-menu .menu-body .main-menu ul li {
+    margin-bottom: 20px;
+  }
+}
+
 .fullscreen-menu .menu-footer {
   height: 25vh;
   background-color: #fff;
   padding: 20px 0;
   box-sizing: border-box;
+}
+
+@media (max-width: 767px) {
+  .fullscreen-menu .menu-footer {
+    height: 30vh;
+  }
 }
 
 .fullscreen-menu .menu-footer .footer-social {
@@ -1220,18 +1289,22 @@ body .round_shape_img img {
   border: 2px solid transparent;
 }
 
-#details_slier {
+#details_slider {
   margin-top: 50px;
   padding-bottom: 100px;
 }
 
-#details_slier .single-slider img {
+#details_slider .single-slider {
+  position: relative;
+}
+
+#details_slider .single-slider img {
   width: 100%;
   height: 791px;
   object-fit: cover;
 }
 
-#details_slier .project_title h2 {
+#details_slider .project_title h2 {
   color: #3E424B;
   -webkit-text-stroke: inherit;
   padding-top: 10px;
@@ -1479,7 +1552,7 @@ body .round_shape_img img {
 }
 
 /*----------------------------------------*/
-/*  RESPONSIVE CSS START 
+/*  RESPONSIVE CSS START
 /*----------------------------------------*/
 @media (max-width: 1440px) {
   .project_img img {
